# waybar-hyprland-tasks

./: Cargo.toml  README.md
src/: main.rs  signal.rs
