[package]
name = "tasks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
json="0.12.4"
nix = "0.26.0"
libc = "0.2.150"



[[bin]]
name = "tasks"
path = "src/main.rs"

[[bin]]
name = "signaler"
path = "src/signal.rs"